==> MillerRabin/thinker-robot-engine-controller/common/BNO080/BNO080.cpp <==
#include "BNO080.h"

uint16_t BNO080::parseInputReport(void)
{
  // Calculate the number of data bytes in this packet
  int16_t dataLength = ((uint16_t)shtpHeader[1] << 8 | shtpHeader[0]);
  dataLength &= ~(1 << 15); // Clear the MSbit. This bit indicates if this package is a continuation of the last.
  // Ignore it for now. TODO catch this as an error and exit

  dataLength -= 4; // Remove the header bytes from the data count

  timeStamp = ((uint32_t)shtpData[4] << (8 * 3)) | ((uint32_t)shtpData[3] << (8 * 2)) | ((uint32_t)shtpData[2] << (8 * 1)) | ((uint32_t)shtpData[1] << (8 * 0));

  // The gyro-integrated input reports are sent via the special gyro channel and do no include the usual ID, sequence, and status fields
  if (shtpHeader[2] == CHANNEL_GYRO)
  {
    rawQuatI = (uint16_t)shtpData[1] << 8 | shtpData[0];
    rawQuatJ = (uint16_t)shtpData[3] << 8 | shtpData[2];
    rawQuatK = (uint16_t)shtpData[5] << 8 | shtpData[4];
    rawQuatReal = (uint16_t)shtpData[7] << 8 | shtpData[6];
    rawFastGyroX = (uint16_t)shtpData[9] << 8 | shtpData[8];
    rawFastGyroY = (uint16_t)shtpData[11] << 8 | shtpData[10];
    rawFastGyroZ = (uint16_t)shtpData[13] << 8 | shtpData[12];

    return SENSOR_REPORTID_GYRO_INTEGRATED_ROTATION_VECTOR;
  }

  uint8_t status = shtpData[5 + 2] & 0x03; // Get status bits
  uint16_t data1 = (uint16_t)shtpData[5 + 5] << 8 | shtpData[5 + 4];
  uint16_t data2 = (uint16_t)shtpData[5 + 7] << 8 | shtpData[5 + 6];
  uint16_t data3 = (uint16_t)shtpData[5 + 9] << 8 | shtpData[5 + 8];
  uint16_t data4 = 0;
  uint16_t data5 = 0; // We would need to change this to uin32_t to capture time stamp value on Raw Accel/Gyro/Mag reports
  uint16_t data6 = 0;

  if (dataLength - 5 > 9)
  {
    data4 = (uint16_t)shtpData[5 + 11] << 8 | shtpData[5 + 10];
  }
  if (dataLength - 5 > 11)
  {
    data5 = (uint16_t)shtpData[5 + 13] << 8 | shtpData[5 + 12];
  }
  if (dataLength - 5 > 13)
  {
    data6 = (uint16_t)shtpData[5 + 15] << 8 | shtpData[5 + 14];
  }

  // Store these generic values to their proper global variable
  if (shtpData[5] == SENSOR_REPORTID_ACCELEROMETER)
  {
    accelAccuracy = status;
    rawAccelX = data1;
    rawAccelY = data2;
    rawAccelZ = data3;
  }
  else if (shtpData[5] == SENSOR_REPORTID_LINEAR_ACCELERATION)
  {
    accelLinAccuracy = status;
    rawLinAccelX = data1;
    rawLinAccelY = data2;
    rawLinAccelZ = data3;
  }
  else if (shtpData[5] == SENSOR_REPORTID_GYROSCOPE)
  {
    gyroAccuracy = status;
    rawGyroX = data1;
    rawGyroY = data2;
    rawGyroZ = data3;
  }
  else if (shtpData[5] == SENSOR_REPORTID_UNCALIBRATED_GYRO)
  {
    UncalibGyroAccuracy = status;
    rawUncalibGyroX = data1;
    rawUncalibGyroY = data2;
    rawUncalibGyroZ = data3;
    rawBiasX = data4;
    rawBiasY = data5;
    rawBiasZ = data6;
  }
  else if (shtpData[5] == SENSOR_REPORTID_MAGNETIC_FIELD)
  {
    magAccuracy = status;
    rawMagX = data1;
    rawMagY = data2;
    rawMagZ = data3;
  }
  else if (shtpData[5] == SENSOR_REPORTID_ROTATION_VECTOR ||
           shtpData[5] == SENSOR_REPORTID_GAME_ROTATION_VECTOR ||
           shtpData[5] == SENSOR_REPORTID_AR_VR_STABILIZED_ROTATION_VECTOR ||
           shtpData[5] == SENSOR_REPORTID_AR_VR_STABILIZED_GAME_ROTATION_VECTOR)
  {
    quatAccuracy = status;
    rawQuatI = data1;
    rawQuatJ = data2;
    rawQuatK = data3;
    rawQuatReal = data4;

    // Only available on rotation vector and ar/vr stabilized rotation vector,
    //  not game rot vector and not ar/vr stabilized rotation vector
    rawQuatRadianAccuracy = data5;
  }
  else if (shtpData[5] == SENSOR_REPORTID_TAP_DETECTOR)
  {
    tapDetector = shtpData[5 + 4]; // Byte 4 only
  }
  else if (shtpData[5] == SENSOR_REPORTID_STEP_COUNTER)
  {
    stepCount = data3; // Bytes 8/9
  }
  else if (shtpData[5] == SENSOR_REPORTID_STABILITY_CLASSIFIER)
  {
    stabilityClassifier = shtpData[5 + 4]; // Byte 4 only
  }
  else if (shtpData[5] == SENSOR_REPORTID_PERSONAL_ACTIVITY_CLASSIFIER)
  {
    activityClassifier = shtpData[5 + 5]; // Most likely state

    // Load activity classification confidences into the array
    for (uint8_t x = 0; x < 9; x++)                  // Hardcoded to max of 9. TODO - bring in array size
      _activityConfidences[x] = shtpData[5 + 6 + x]; // 5 bytes of timestamp, byte 6 is first confidence byte
  }
  else if (shtpData[5] == SENSOR_REPORTID_RAW_ACCELEROMETER)
  {
    memsRawAccelX = data1;
    memsRawAccelY = data2;
    memsRawAccelZ = data3;
  }
  else if (shtpData[5] == SENSOR_REPORTID_RAW_GYROSCOPE)
  {
    memsRawGyroX = data1;
    memsRawGyroY = data2;
    memsRawGyroZ = data3;
  }
  else if (shtpData[5] == SENSOR_REPORTID_RAW_MAGNETOMETER)
  {
    memsRawMagX = data1;
    memsRawMagY = data2;
    memsRawMagZ = data3;
  }
  else if (shtpData[5] == SHTP_REPORT_COMMAND_RESPONSE)
  {
    if (_printDebug == true)
    {
      printf("!\n");
    }
    // The BNO080 responds with this report to command requests. It's up to use to remember which command we issued.
    uint8_t command = shtpData[5 + 2]; // This is the Command byte of the response

    if (command == COMMAND_ME_CALIBRATE)
    {
      if (_printDebug == true)
      {
        printf("ME Cal report found!\n");
      }
      calibrationStatus = shtpData[5 + 5]; // R0 - Status (0 = success, non-zero = fail)
    }
  }
  else if (shtpData[5] == SENSOR_REPORTID_GRAVITY)
  {
    gravityAccuracy = status;
    gravityX = data1;
    gravityY = data2;
    gravityZ = data3;
  }
  else
  {
    // This sensor report ID is unhandled.
    // See reference manual to add additional feature reports as needed
    return 0;
  }

  // TODO additional feature reports may be strung together. Parse them all.
  return shtpData[5];
}

bool BNO080::receivePacket(void)
{    
  uint8_t pdata[4];
  int i2c_ret = i2c_read_blocking(_i2cPort, _deviceAddress, pdata, 4, false);
  if (i2c_ret == PICO_ERROR_GENERIC) {          
    return false;
  }

  // Get the first four bytes, aka the packet header
  uint8_t packetLSB = pdata[0];
  uint8_t packetMSB = pdata[1];
  uint8_t channelNumber = pdata[2];
  uint8_t sequenceNumber = pdata[3];

  // Store the header info.
  shtpHeader[0] = packetLSB;
  shtpHeader[1] = packetMSB;
  shtpHeader[2] = channelNumber;
  shtpHeader[3] = sequenceNumber;

  // Calculate the number of data bytes in this packet
  uint16_t dataLength = (((uint16_t)packetMSB) << 8) | ((uint16_t)packetLSB);
  dataLength &= ~(1 << 15); // Clear the MSbit.  
  // This bit indicates if this package is a continuation of the last. Ignore it for now.
  // TODO catch this as an error and exit

  // if (_printDebug == true)
  // {
  // 	_debugPort->print(F("receivePacket (I2C): dataLength is: "));
  // 	_debugPort->println(dataLength);
  // }

  if (dataLength == 0) {    
    return false;
  }
  dataLength -= 4; // Remove the header bytes from the data count
    
  getData(dataLength);
  
  // Quickly check for reset complete packet. No need for a seperate parser.
  // This function is also called after soft reset, so we need to catch this
  // packet here otherwise we need to check for the reset packet in multiple
  // places.
  if (shtpHeader[2] == CHANNEL_EXECUTABLE && shtpData[0] == EXECUTABLE_RESET_COMPLETE) {  
    _hasReset = true;
  }

  return true;
}

bool BNO080::getData(uint16_t bytesRemaining)
{
  uint16_t bytesToRead = (bytesRemaining < MAX_PACKET_SIZE + 4) ? bytesRemaining + 4 : MAX_PACKET_SIZE + 4;  
  uint8_t pdata[bytesToRead];
  int i2c_ret = i2c_read_blocking(_i2cPort, _deviceAddress, pdata, bytesToRead, false);
  if (i2c_ret == PICO_ERROR_GENERIC) {    
    return 0;
  }
  
  memcpy(shtpData, &pdata[4], bytesToRead - 4);
  return true;
}

bool BNO080::sendPacket(uint8_t channelNumber, uint8_t dataLength)
{  
  uint8_t packetLength = dataLength + 4; // Add four bytes for the header

  
  size_t count = dataLength + 4;
  uint8_t pdata[count];
  // Send the 4 byte packet header
  pdata[0] = packetLength & 0xFF;
  pdata[1] = packetLength >> 8;  
  pdata[2] = channelNumber;       // Channel number
  pdata[3] = sequenceNumber[channelNumber]++;  // Send the sequence number, increments with each packet sent, different counter for each channel
  memcpy(&pdata[4], shtpData, dataLength);

  int i2c_ret = i2c_write_blocking(_i2cPort, _deviceAddress, pdata, count, false);
  if (i2c_ret == PICO_ERROR_GENERIC) {          
    return false;
  }  
  return true;
}
